@@ -1,4 +1,5 @@
 [CW2]
++ "Pick a Function" list: Sort the functions by most-popular usage. Functions that are used more frequently will appear closer to the top of the list. Add an options menu item to clear the usage stats.
 + Show dialog: allow to set custom presets (as a comma-separated string).
 + AddCommand dialog: allow to set icon.
 * SyncProxyAndroid SDK: fix AddCommand's setCmdIcon method.
